welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:13: error: expected class or object definition
def direm(a:Int, b:Int): Boolean = {
^maxMod5:24: error: expected class or object definition
def irem(a:Int):Int = {
^maxMod5:29: error: expected class or object definition
def min (a:Int , b:Int): Int = {
^maxMod5:34: error: expected class or object definition
def max (a:Int , b:Int): Int = {
^maxMod5:38: error: Unmatched closing brace '}' ignored here
 }
 ^